--- a/unidad2.html
+++ b/unidad2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Unidad 2</title>
-  <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
