--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Unidad 1</title>
+    <title>ARQUITECTURA DE COMPUTADORAS</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body class="menu">
@@ -15,7 +15,7 @@
             </ul>
         </nav>
         <div class="titulo-principal">
-            <h1>Arquitectura de Computadoras </h1>
+            <h1>ARQUITECTURA DE COMPUTADORAS</h1>
         </div>
         <div class="introduccion">
             <p>Bienvenido a esta página dedicada al tema de arquitectura de computadoras. En esta página, exploraremos los diferentes componentes y procesos involucrados en el diseño y construcción de computadoras.</p>
